myhome/src/objects/position__c.object
<CustomObject>
    <description>This object stores infromation about various open job positions in our company</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if Apex is mandatory for this position</description>
        <inlineHelpText>Check this box if Apex is mandatory for this position</inlineHelpText>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if C# is required for this position</description>
        <inlineHelpText>Check this box if C# is required for this position</inlineHelpText>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Enter the date when this position is filled</description>
        <inlineHelpText>Enter the date when this position is filled</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(ISBLANK(  Close_Date__c ), TODAY() - Open_Date__c , Close_Date__c-Open_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <description>provide the required Educational Requirements</description>
        <inlineHelpText>provide the required Educational Requirements</inlineHelpText>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>select the functional area</description>
        <inlineHelpText>select the functional area</inlineHelpText>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wharehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY()+90</defaultValue>
        <description>Enter the date when the candidate is hired for ths position</description>
        <inlineHelpText>Enter the date when the candidate is hired for ths position</inlineHelpText>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the respective hiring manager for this position</description>
        <inlineHelpText>respective hiring manager for this position</inlineHelpText>
        <label>Hiring manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if javascript is required for this position</description>
        <inlineHelpText>Check this box if javascript is required for this position</inlineHelpText>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check the box if Java is required for this position</description>
        <inlineHelpText>check the box if Java is required for this position</inlineHelpText>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High-level description of the job and its duties.</description>
        <inlineHelpText>High-level description of the job and its duties.</inlineHelpText>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>select a job level</description>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>select a location for the job position</description>
        <inlineHelpText>select a location for the job position</inlineHelpText>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco, CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Austin, TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulder, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney, Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo, Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <description>Enter the maximum salary offered for this position</description>
        <inlineHelpText>Enter the maximum salary offered for this position</inlineHelpText>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <description>enter the min salary offered</description>
        <inlineHelpText>enter the min salary offered</inlineHelpText>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Enter the date from when this position is available</description>
        <inlineHelpText>Enter the date from when this position is available</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>Provide the Job responsibilities</description>
        <inlineHelpText>Provide the Job responsibilities</inlineHelpText>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <description>Provide the detials of Skills Required for this job position</description>
        <inlineHelpText>Provide the detials of Skills Required for this job position</inlineHelpText>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>select the status of the position</description>
        <inlineHelpText>select the status of the position</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New position</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Penading Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ope- Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed- filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed- Not approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed- canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check the box if travel is required for this position</description>
        <inlineHelpText>check the box if travel is required for this position</inlineHelpText>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>job type ex: full time</description>
        <inlineHelpText>job type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>part time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>position title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_status_Rule</fullName>
        <active>true</active>
        <description>Before changing status to close , close date should be specified</description>
        <errorConditionFormula>ISBLANK( Close_Date__c ) &amp;&amp; (ISPICKVAL(Status__c,&quot;Closed- filled&quot;)|| ISPICKVAL(Status__c,&quot;Closed- filled&quot;))</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Before changing status to close , close date should be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min pay should never exceed Max PAY</description>
        <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
        <errorMessage>Min pay should never exceed Max PAY</errorMessage>
    </validationRules>
</CustomObject>